3. API status (automated command)

--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <div class="logo">7mra 7mara</div>
+      <div class="logo"></div>
     </header>
     <div class="container">
       <section class="filters">
@@ -50,6 +50,13 @@
 	<button type="button">Search</button>
       </section>
       <div class="placesh1"><h1>Places</h1></div>
+      <div class="description">
+        <p> This is a lovely 1 bedroom and 1 bathroom apartment that
+            can accommodate 2 people. It locates at the center of
+            Shanghai and next to subway line 1,1 stop to People
+            Square, 2 stops to Bund, 3 stops to Jingan Temple.
+        </p>
+    </div>
       <section class="places">
 	<!-- <h1>Places</h1> -->
 	{% for place in places %}
